--- a/login/templates/base.html
+++ b/login/templates/base.html
@@ -22,6 +22,43 @@
         .navbar-collapse {
             display: flex !important;
         }
+
+        /* Estilos para el dropdown */
+        .dropdown-menu {
+            padding: 0; /* Elimina espacios innecesarios */
+        }
+
+        .menu-item {
+            display: flex;
+            align-items: center; /* Centra verticalmente los elementos */
+            white-space: nowrap; /* Evita que el texto se rompa en varias líneas */
+            padding: 10px 15px; /* Espaciado interno */
+            font: 20px verdana, sans-serif; /* Establece el tamaño y la fuente */
+            color: black;
+            background-color: #1B9E88; /* Fondo del enlace */
+            border-radius: 5px; /* Bordes redondeados si lo deseas */
+            text-decoration: none; /* Elimina el subrayado */
+            width: max-content; /* Ajusta el tamaño al contenido */
+            overflow: hidden; /* Evita desbordes */
+        }
+
+        /* Estilo del icono dentro del menú */
+        .menu-item img {
+            margin-right: 10px; /* Espaciado entre el icono y el texto */
+        }
+
+        /* Estilo para cuando se pasa el ratón por encima */
+        .menu-item:hover {
+            background-color: #178C6B; /* Cambia el color de fondo cuando el ratón pasa por encima */
+        }
+
+        /* Responsividad */
+        @media (max-width: 767px) {
+            .navbar-collapse {
+                flex-direction: column;
+                align-items: center;
+            }
+        }
     </style>
 </head>
 <body>
@@ -34,18 +71,31 @@
           <a class="navbar-brand" href="#" style="color: white; font: 20px verdana, sans-serif;">SISTEMA-EGRESADO</a>
           <div class="navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: white; font: 20px verdana, sans-serif;">
-                        <span class="navbar-toggler-icon"></span>
-                    </a>
-                    <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                        {% if user.is_authenticated %}
-                            <li><a class="dropdown-item" href="{% url 'buscar' %}" style="color: black; font: 20px verdana, sans-serif;"><img src="https://img.icons8.com/ios-filled/24/000000/search.png" alt="Buscar"> Buscar</a></li>
-                            <li><a class="dropdown-item" href="{% url 'cargar_archivo' %}" style="color: black; font: 20px verdana, sans-serif;"><img src="https://img.icons8.com/ios-filled/24/000000/upload.png" alt="Cargar Archivo"> Cargar</a></li>
-                        {% endif %}
-                    </ul>
-                </li>
-            </ul>
+              <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: white; font: 20px verdana, sans-serif;">
+                      <span class="navbar-toggler-icon"></span>
+                  </a>
+                  <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown" style="background-color: #1B9E88;">
+                      {% if user.is_authenticated %}
+                          <li>
+                              <a class="dropdown-item menu-item" href="{% url 'buscar' %}">
+                                  <img src="https://img.icons8.com/ios-filled/24/000000/search.png" alt="Buscar"> Buscar
+                              </a>
+                          </li>
+                          <li>
+                              <a class="dropdown-item menu-item" href="{% url 'cargar_archivo' %}">
+                                  <img src="https://img.icons8.com/ios-filled/24/000000/upload.png" alt="Cargar Archivo"> Cargar
+                              </a>
+                          </li>
+                          <li>
+                              <a class="dropdown-item menu-item" href="{% url 'egresadosDestacados' %}">
+                                  <img src="https://img.icons8.com/?size=16&id=TICBrlr1XpVp&format=png" alt="Egresados Destacados"> Egresados Destacados
+                              </a>
+                          </li>
+                      {% endif %}
+                  </ul>
+              </li>
+          </ul>
             <ul class="navbar-nav ms-auto">
                 {% if user.is_authenticated %}
                     <li class="nav-item">
