--- a/login/templates/base.html
+++ b/login/templates/base.html
@@ -92,6 +92,11 @@
                                   <img src="https://img.icons8.com/?size=16&id=TICBrlr1XpVp&format=png" alt="Egresados Destacados"> Egresados Destacados
                               </a>
                           </li>
+                          <li>
+                            <a class="dropdown-item menu-item" href="" data-bs-toggle="modal" data-bs-target="#editPrincipalModal">
+                                <img src="https://img.icons8.com/ios-filled/24/000000/edit.png" alt="Editar Principal"> Editar Principal
+                            </a>
+                        </li>
                       {% endif %}
                   </ul>
               </li>
@@ -116,6 +121,8 @@
           </div>
         </div>
       </nav>
+
+      
 
     {% block content %}
     {% endblock %}
