--- a/login/templates/vistasPrivadas/private.html
+++ b/login/templates/vistasPrivadas/private.html
@@ -8,8 +8,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vista Privada</title>
 </head>
-<body style="background-color: red;">
-    
+<body style="background-color: white;">
+    <div class="navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: white; font: 20px verdana, sans-serif;">
+                  <span class="navbar-toggler-icon"></span>
+              </a>
+              <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown" style="background-color: #1B9E88;">
+                  {% if user.is_authenticated %}
+                      <li>
+                          <a class="dropdown-item menu-item" href="{% url 'buscar' %}">
+                              <img src="https://img.icons8.com/ios-filled/24/000000/search.png" alt="Buscar"> Buscar
+                          </a>
+                      </li>
+                      <li>
+                          <a class="dropdown-item menu-item" href="{% url 'cargar_archivo' %}">
+                              <img src="https://img.icons8.com/ios-filled/24/000000/upload.png" alt="Cargar Archivo"> Cargar
+                          </a>
+                      </li>
+                      <li>
+                          <a class="dropdown-item menu-item" href="{% url 'egresadosDestacados' %}">
+                              <img src="https://img.icons8.com/?size=16&id=TICBrlr1XpVp&format=png" alt="Egresados Destacados"> Egresados Destacados
+                          </a>
+                      </li>
+                      <li>
+                        <a class="dropdown-item menu-item" href="" data-bs-toggle="modal" data-bs-target="#editPrincipalModal">
+                            <img src="https://img.icons8.com/ios-filled/24/000000/edit.png" alt="Editar Principal"> Editar Principal
+                        </a>
+                    </li>
+                  {% endif %}
 </body>
 </html>
 {% endblock %}
