mejoras del signin y signup

--- a/login/templates/base.html
+++ b/login/templates/base.html
@@ -68,7 +68,7 @@
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <a class="navbar-brand" href="#" style="color: white; font: 20px verdana, sans-serif;">SISTEMA-EGRESADO</a>
+          <a class="navbar-brand" href="{% url 'home' %}" style="color: white; font: 20px verdana, sans-serif;">SISTEMA-EGRESADO</a>
           <div class="navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item dropdown">
