--- a/login/templates/vistasPublicas/home.html
+++ b/login/templates/vistasPublicas/home.html
@@ -21,7 +21,7 @@
                         <!-- Video de fondo y texto -->
                         <div class="col-md-6" style="position: relative; overflow: hidden; height: 70vh;">
                             <!-- Video de fondo -->
-                            <video autoplay loop muted playsinline style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; z-index: -1;">
+                            <video autoplay loop muted playsinline style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; z-index: -1; border-radius: 8px;">
                                 <source src="{% static 'multimedia/iservideo.mp4' %}" type="video/mp4">
                                 Tu navegador no soporta la reproducción de videos.
                             </video>
@@ -46,7 +46,7 @@
                                 </div>
                                 <img style="width: 203%; height: 90%; " src="https://www.gacetaregional.com/sitegr/wp-content/uploads/2019/09/iser-de-pamplona.png" alt="Imagen ISER 4">
                             </div>
-                        </div>
+                        </div>                       
                     </div>
                 </div>
             </section>
