--- a/login/templates/vistasPrivadas/editarEgresado.html
+++ b/login/templates/vistasPrivadas/editarEgresado.html
@@ -8,7 +8,9 @@
             {% csrf_token %}
             {{ form.as_p }}
             <div class="d-flex justify-content-between mt-4">
-                <button type="submit" class="btn btn-success w-45">Guardar Cambios</button>
+                <button class="btn btn-primary" onclick="window.location.href='{% url 'egresadosDestacados'%}'">  
+                    Guardar  
+                </button>
                 <a href="{% url 'egresadosDestacados' %}" class="btn btn-secondary w-45">Cancelar</a>
             </div>
         </form>
