--- a/login/templates/vistasPrivadas/private.html
+++ b/login/templates/vistasPrivadas/private.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vista Privada</title>
 </head>
-<body style="background-color: white;">
+<body style="background-color: rgb(13, 119, 61);">
     <div class="navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item dropdown">
