--- a/login/templates/base.html
+++ b/login/templates/base.html
@@ -71,36 +71,36 @@
           <a class="navbar-brand" href="{% url 'home' %}" style="color: white; font: 20px verdana, sans-serif;">SISTEMA-EGRESADO</a>
           <div class="navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-              <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: white; font: 20px verdana, sans-serif;">
-                      <span class="navbar-toggler-icon"></span>
-                  </a>
-                  <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown" style="background-color: #1B9E88;">
-                      {% if user.is_authenticated %}
-                          <li>
-                              <a class="dropdown-item menu-item" href="{% url 'buscar' %}">
-                                  <img src="https://img.icons8.com/ios-filled/24/000000/search.png" alt="Buscar"> Buscar
-                              </a>
-                          </li>
-                          <li>
-                              <a class="dropdown-item menu-item" href="{% url 'cargar_archivo' %}">
-                                  <img src="https://img.icons8.com/ios-filled/24/000000/upload.png" alt="Cargar Archivo"> Cargar
-                              </a>
-                          </li>
-                          <li>
-                              <a class="dropdown-item menu-item" href="{% url 'egresadosDestacados' %}">
-                                  <img src="https://img.icons8.com/?size=16&id=TICBrlr1XpVp&format=png" alt="Egresados Destacados"> Egresados Destacados
-                              </a>
-                          </li>
-                          <li>
-                            <a class="dropdown-item menu-item" href="{% url 'editar_principal' %}" alt="Editar Principal">
-                                <img src="https://img.icons8.com/ios-filled/24/000000/edit.png" alt="Editar Principal"> Editar Principal
-                            </a>
-                        </li>
-                      {% endif %}
-                  </ul>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: white; font: 20px verdana, sans-serif;">
+                        <span class="navbar-toggler-icon"></span>
+                    </a>
+                    <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown" style="background-color: #f3fffd; min-width: 200px; width: auto;">
+                        {% if user.is_authenticated %}
+                            <li>
+                                <a class="dropdown-item menu-item" href="{% url 'buscar' %}">
+                                    <img src="https://img.icons8.com/ios-filled/24/000000/search.png" alt="Buscar"> Buscar
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item menu-item" href="{% url 'cargar_archivo' %}">
+                                    <img src="https://img.icons8.com/ios-filled/24/000000/upload.png" alt="Cargar Archivo"> Cargar
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item menu-item" href="{% url 'egresadosDestacados' %}">
+                                    <img src="https://img.icons8.com/?size=16&id=TICBrlr1XpVp&format=png" alt="Egresados Destacados"> Destacados
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item menu-item" href="{% url 'editar_principal' %}" alt="Editar Principal">
+                                    <img src="https://img.icons8.com/ios-filled/24/000000/edit.png" alt="Editar Principal"> Editar Principal
+                                </a>
+                            </li>
+                        {% endif %}
+                    </ul>         
               </li>
-          </ul>
+            </ul>
             <ul class="navbar-nav ms-auto">
                 {% if user.is_authenticated %}
                     <li class="nav-item">
@@ -114,7 +114,7 @@
                       <a class="nav-link" href="{% url 'signup' %}" style="color: white; font: 20px verdana, sans-serif;">Registrarse</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="{% url 'signin' %}" style="color: white; font: 20px verdana, sans-serif;">iniciar Sesión</a>
+                      <a class="nav-link" href="{% url 'signin' %}" style="color: white; font: 20px verdana, sans-serif;">Iniciar Sesión</a>
                     </li>
                 {% endif %}
             </ul>
@@ -128,5 +128,39 @@
     {% endblock %}
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <style>
+        /* Asegura que el ul se ajuste dinámicamente al contenido */
+        ul.dropdown-menu {
+            padding: 0;
+            border-radius: 0.5rem;
+            width: auto; /* Deja que el ancho se ajuste al contenido */
+            min-width: 150px; /* Establece un ancho mínimo solo para que no quede demasiado estrecho */
+        }
+
+        ul.dropdown-menu > li {
+            display: flex;
+            width: 100%;
+        }
+
+        ul.dropdown-menu .dropdown-item {
+            padding: 8px 16px;
+            display: flex;
+            align-items: center;
+            text-align: left;
+            white-space: nowrap; /* Evita que el texto se divida en varias líneas */
+            overflow: hidden;
+            text-overflow: ellipsis; /* Si el texto es demasiado largo, cortará con "..." */
+        }
+
+        ul.dropdown-menu .dropdown-item img {
+            margin-right: 8px; /* Espaciado entre el ícono y el texto */
+        }
+
+        /* Estilo al pasar el mouse */
+        ul.dropdown-menu .dropdown-item:hover {
+            background-color: #ffff;
+        }
+
+    </style>
 </body>
 </html>
