--- a/login/templates/vistasPrivadas/private.html
+++ b/login/templates/vistasPrivadas/private.html
@@ -7,15 +7,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vista Privada</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 </head>
-<body style="background-color: rgb(13, 119, 61);">
+<body style="background-color: rgb(255, 255, 255);">
     <div class="navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: white; font: 20px verdana, sans-serif;">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color:black;  font: 20px verdana, sans-serif; display: inline-block;">
                   <span class="navbar-toggler-icon"></span>
               </a>
-              <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown" style="background-color: #1B9E88;">
+              <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown" style="background-color: white;">
                   {% if user.is_authenticated %}
                       <li>
                           <a class="dropdown-item menu-item" href="{% url 'buscar' %}">
