agregacion editar principal

--- a/login/templates/base.html
+++ b/login/templates/base.html
@@ -93,7 +93,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a class="dropdown-item menu-item" href="{% url 'editar_principal' %}" alt="Editar Principal">
+                                <a class="dropdown-item menu-item" href="{% url 'cargar_imagenes' %}" alt="Editar Principal">
                                     <img src="https://img.icons8.com/ios-filled/24/000000/edit.png" alt="Editar Principal"> Editar Principal
                                 </a>
                             </li>
